New JAX-RS demo project, and general refactoring.